--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,12 +48,12 @@
             <li><a routerLinkActive="active" routerLink="/book/genre/list" class="dropdown-item" href="#">Жанры+</a></li>
             <li><a routerLinkActive="active" routerLink="/book/age-limit/list" class="dropdown-item" href="#">Возрастные ограничения +</a></li>
             <li><a routerLinkActive="active" routerLink="/book/translation" class="dropdown-item" href="#">Перевод книг + </a></li>
-            <li><a routerLinkActive="active" routerLink="/book/series" class="dropdown-item" href="#">Серия книг</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/series" class="dropdown-item" href="#">Серия книг +</a></li>
             <li><a routerLinkActive="active" routerLink="/book/rent" class="dropdown-item" href="#">Список в аренде</a></li>
             <li><a routerLinkActive="active" routerLink="/book/rent-add" class="dropdown-item" href="#">Выдать в аренду</a></li>
             <li><a routerLinkActive="active" routerLink="/book/price-rent" class="dropdown-item" href="#">Стоимость аренды +-</a></li>
             <li><a routerLinkActive="active" routerLink="/book/cover-type" class="dropdown-item" href="#">Виды обложек+</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/publisher" class="dropdown-item" href="#">Издательства</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/publisher" class="dropdown-item" href="#">Издательства + </a></li>
             <li><a routerLinkActive="active" routerLink="/book/edition-language" class="dropdown-item" href="#">Язык издания</a></li>
           </ul>
         </li>
