--- a/src/app/ui/books/books-list/books.component.html
+++ b/src/app/ui/books/books-list/books.component.html
@@ -1,25 +1,53 @@
 <div class="books_parent">
 
-  <div *ngFor="let item of book">
-    <div class="books_child">
-      <p>Название: {{item.bookTitle}}</p>
-      <p>Автор :{{item.authorsFullName}}</p>
-      <p>Жанр: {{item.genreName}}</p>
-      <p>Дата выхода: {{item.bookReleaseDate}}</p>
-      <p>Издательство: {{item.publisherName}}</p>
-      <p>Тип обложки: {{item.coverName}}</p>
-      <p>Серия: {{item.seriesName}}</p>
-      <p>ISBN: {{item.nameISBN}}</p>
-      <p>Возрастное ограничение: {{item.ageLimitName}}</p>
-      <p>Язык издания: {{item.languageName}}</p>
-      <p>Перевод: {{item.translationName}}</p>
-      <p>Страниц: {{item.numberPages}}</p>
-      <img class="img-fluid img-thumbnail" src="{{item.imageSrcTemp}}" alt="" >
-      <button class="btn btn-primary $gray-300">Добавить в корзину</button>
+  <div class="team-boxed">
+    <div class="container">
+      <div class="row people">
+        <div class="col-md-6 col-lg-4 item" *ngFor="let item of book">
+          <div class="box"><img style="height: 150pt;width: 150pt;" src="{{item.imageSrcTemp}}">
+            <h3 class="name">Ben Johnson</h3>
+            <p>Название: {{item.bookTitle}}</p>
+            <p>Автор :{{item.authorsFullName}}</p>
+            <p>Жанр: {{item.genreName}}</p>
+            <p>Дата выхода: {{item.bookReleaseDate}}</p>
+            <p>Издательство: {{item.publisherName}}</p>
+            <p>Тип обложки: {{item.coverName}}</p>
+            <p>Серия: {{item.seriesName}}</p>
+            <p>ISBN: {{item.nameISBN}}</p>
+            <p>Возрастное ограничение: {{item.ageLimitName}}</p>
+            <p>Язык издания: {{item.languageName}}</p>
+            <p>Перевод: {{item.translationName}}</p>
+            <p>Страниц: {{item.numberPages}}</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque nam non omnis quis sed? Ab commodi dolores provident sed sit.</p>
+            <button class="btn btn-primary $gray-300">Добавить в корзину</button>
+            <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i
+              class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
 
-<p>books works!</p>
+  <!--  <div *ngFor="let item of book">-->
+  <!--    <div class="books_child">-->
+  <!--      <p>Название: {{item.bookTitle}}</p>-->
+  <!--      <p>Автор :{{item.authorsFullName}}</p>-->
+  <!--      <p>Жанр: {{item.genreName}}</p>-->
+  <!--      <p>Дата выхода: {{item.bookReleaseDate}}</p>-->
+  <!--      <p>Издательство: {{item.publisherName}}</p>-->
+  <!--      <p>Тип обложки: {{item.coverName}}</p>-->
+  <!--      <p>Серия: {{item.seriesName}}</p>-->
+  <!--      <p>ISBN: {{item.nameISBN}}</p>-->
+  <!--      <p>Возрастное ограничение: {{item.ageLimitName}}</p>-->
+  <!--      <p>Язык издания: {{item.languageName}}</p>-->
+  <!--      <p>Перевод: {{item.translationName}}</p>-->
+  <!--      <p>Страниц: {{item.numberPages}}</p>-->
+  <!--      <img class="img-fluid img-thumbnail" src="{{item.imageSrcTemp}}" alt="" >-->
+  <!--      <button class="btn btn-primary $gray-300">Добавить в корзину</button>-->
+  <!--    </div>-->
+  <!--  </div>-->
+  <!--</div>-->
 
-<button (click)="getAllBook()"> get all</button>
+  <!--<p>books works!</p>-->
+
+  <!--<button (click)="getAllBook()"> get all</button>-->
