--- a/src/app/ui/common_styles.css
+++ b/src/app/ui/common_styles.css
@@ -1,4 +1,4 @@
-.CommonParent{
+.CommonParent {
   background: #b4e6ff;
   display: flex;
   justify-content: center;
@@ -6,57 +6,66 @@
   margin-left: 30%;
   margin-right: 30%;
 }
-.CommonParent p{
+
+.CommonParent p {
   margin-left: 5%;
   margin-top: 5pt;
   margin-bottom: 0;
 }
-.CommonParent input{
+
+.CommonParent input {
   margin: 0;
   padding: 0;
 }
 
-.buttonCreateBook{
+.buttonCreateBook {
   margin: 0 auto;
   padding-bottom: 20pt;
 }
 
-.page{
+.page {
   padding-bottom: 50pt;
   padding-top: 20pt;
 }
 
-.col-md-1:hover{
+.col-md-1:hover {
   background-color: #b4e6ff;
   cursor: pointer;
 }
 
-.col-md-1{
+.col-md-1 {
   text-align: center;
   vertical-align: middle;
 }
 
 
-.edit:hover{
+.edit:hover {
   background: rgba(232, 226, 146, 0.5);
   cursor: pointer;
 }
 
-.cancel:hover{
+.cancel:hover {
   background: rgba(239, 177, 90, 0.5);
   cursor: pointer;
 }
 
-.save:hover{
+.save:hover {
   background: rgba(213, 255, 142, 0.5);
   cursor: pointer;
 }
 
-.delete:hover{
+.delete:hover {
   background: rgba(255, 54, 54, 0.5);
   cursor: pointer;
 }
-.container{
+
+.container {
   margin-top: 50pt;
+}
+
+.selected22 {
+  width: 100%;
+  height: 100%;
+  top: 50%;
 }
 
