--- a/src/app/ui/users/profile/profile.component.html
+++ b/src/app/ui/users/profile/profile.component.html
@@ -30,7 +30,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Firstname</h6>
+                <h6 class="mb-0">Имя</h6>
               </div>
               <div class="col-sm-9 text-secondary">
                 <p *ngIf="!editProfileBool">{{myProfile.firstname}}</p>
@@ -40,7 +40,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Lastname</h6>
+                <h6 class="mb-0">Фамилия</h6>
               </div>
               <div class="col-sm-9 text-secondary">
                 <p *ngIf="!editProfileBool">{{myProfile.lastname}}</p>
@@ -60,7 +60,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Phone</h6>
+                <h6 class="mb-0">Телефон</h6>
               </div>
               <div class="col-sm-9 text-secondary">
                 <p *ngIf="!editProfileBool">{{myProfile.phone}}</p>
@@ -70,7 +70,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Address</h6>
+                <h6 class="mb-0">Адрес</h6>
               </div>
               <div class="col-sm-9 text-secondary">
                 <p *ngIf="!editProfileBool">{{myProfile.address}}</p>
@@ -80,7 +80,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Date of Birth</h6>
+                <h6 class="mb-0">Дата рождения</h6>
               </div>
               <div class="col-sm-9 text-secondary">
                 <p *ngIf="!editProfileBool">{{myProfile.dateOfBirth}}</p>
@@ -90,7 +90,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <h6 class="mb-0">Info</h6>
+                <h6 class="mb-0">Прочая информация</h6>
               </div>
               <div class="col-sm-9 text-secondary">
                 <p *ngIf="!editProfileBool">{{myProfile.info}}</p>
