--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
 <body>
 <div class="container">
 <app-top-menu></app-top-menu>
-<router-outlet></router-outlet><app-footer></app-footer>
+<router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
 </body>
 </html>
