--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,19 +1,19 @@
-.back-login-form {
-  display: flex;
-  background: #4e5d43;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  background-image: url("https://i.pinimg.com/originals/1f/32/de/1f32de75ae0a1ac218a902f6f361a6d7.jpg");
-}
 
 .login-form {
   flex-direction: column;
   display: flex;
   min-width: 30%;
-  background-color: rgba(140, 140, 166, 0.41);
+  min-height: 500pt;
+  /*background-color: rgba(140, 140, 166, 0.41);*/
+  background-image: url("https://thehill.com/sites/default/files/ca_librarybooks_istock.jpg");
+}
 
+.form-floating {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10pt;
+  min-width: 150pt;
+  max-width: 33%;
 }
 
 .form-input {
@@ -21,12 +21,9 @@
   margin-bottom: 5pt;
 }
 
-.info_footer{
-  border: 1px dashed #ccc;
-  background-color: #f4f4ff;
-  word-wrap: break-word;
-  overflow: hidden;
-  padding: 10pt;
-  min-width: 30%;
+input.ng-invalid.ng-touched {
+  border: 1pt solid red;
 }
+
+
 
