--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,17 +1,35 @@
-.register_parent{
-  background: #ffcfcf;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
 
-margin-left: 30%;
-  margin-right: 30%;
+.login-form {
+  flex-direction: column;
+  display: flex;
+  min-width: 30%;
+  min-height: 500pt;
+  /*background-color: rgba(140, 140, 166, 0.41);*/
+  background-image: url("https://thehill.com/sites/default/files/ca_librarybooks_istock.jpg");
+}
+
+.form-floating {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10pt;
+  min-width: 150pt;
+  max-width: 33%;
+}
+
+.checkbox{
+  background-color: rgba(255, 255, 255, 0.65);
+  padding: 10pt 10pt;
+  border-radius: 15pt;
 }
 
 .form-input {
   margin-top: 5pt;
   margin-bottom: 5pt;
 }
-.p{
-  word-wrap: break-word;
+
+input.ng-invalid.ng-touched {
+  border: 1pt solid red;
 }
+
+
+
