--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,13 +1,126 @@
-<div>
-<div class="register_parent">
-  <input  class="form-input" type="text" placeholder="email" [(ngModel)]="obj.email">
-  <input class="form-input" type="text" placeholder="name" [(ngModel)]="obj.name">
-  <input class="form-input" type="text" placeholder="surname" [(ngModel)]="obj.surname">
-  <input class="form-input" type="password" placeholder="password" [(ngModel)]="obj.password">
-  <button (click)="apiRegister()">Registration</button>
-  <br>
-  <div>
-    <p class="p">{{message}}</p>
+
+<div class="login-form">
+  <div class="container mt-auto mb-auto">
+    <form (ngSubmit)="submitForm(formElement)" #formElement="ngForm" >
+      <div class="form-floating">
+        <input
+          type="email"
+          class="form-control"
+          [ngClass]="{'is-invalid': emailElement.invalid && emailElement.touched,'is-valid': !emailElement.invalid  && emailElement.touched}"
+          ngModel name="email"
+          required
+          email
+          #emailElement = "ngModel"
+          id="floatingInput233"
+          placeholder="email">
+        <label for="floatingInput233">Эл. почта</label>
+      </div>
+
+      <div class="form-floating">
+        <input
+          type="text"
+          class="form-control"
+          [ngClass]="{'is-invalid': firstnameElement.invalid && firstnameElement.touched,'is-valid': !firstnameElement.invalid  && firstnameElement.touched}"
+          ngModel name="firstname"
+          required
+          #firstnameElement = "ngModel"
+          id="floatingInput233123"
+          placeholder="email">
+        <label for="floatingInput233123">Имя</label>
+      </div>
+
+
+      <div class="form-floating">
+        <input
+          type="text"
+          class="form-control"
+          [ngClass]="{'is-invalid': surnameElement.invalid && surnameElement.touched,'is-valid': !surnameElement.invalid  && surnameElement.touched}"
+          ngModel name="surname"
+          required
+          #surnameElement = "ngModel"
+          id="floatingInp22ut233123"
+          placeholder="email">
+        <label for="floatingInp22ut233123">Фамилия</label>
+      </div>
+      <div class="form-group form-floating">
+        <input
+          [type]="textOrPass"
+          class="form-control"
+          [ngClass]="{'is-invalid': passValid.invalid && passValid.touched,'is-valid': !passValid.invalid && passValid.touched}"
+          ngModel name="password"
+          required
+          #passValid = "ngModel"
+          id="floatingInput233222222222"
+          placeholder="password">
+        <label for="floatingInput233222222222">Пароль</label>
+      </div>
+      <div class="form-group form-floating">
+        <input
+          [type]="textOrPass"
+          class="form-control"
+          [ngClass]="{'is-invalid': confirmPassword.invalid && confirmPassword.touched,'is-valid': !confirmPassword.invalid && confirmPassword.touched}"
+          ngModel name="confirmPassword"
+          required
+          #confirmPassword = "ngModel"
+          id="confirmPassword"
+          placeholder="password">
+        <label for="confirmPassword">Подтвержение пароля</label>
+      </div>
+
+      <div class="form-group form-floating checkbox">
+        <div class="form-check form-switch">
+          <input ngModel name="checkboxAccept"
+                 class="form-check-input"
+                 type="checkbox"
+                 required
+                 id="flexSwitchCheckDefault">
+          <label class="form-check-label" for="flexSwitchCheckDefault"><a>Принимаю пользовательское соглашение</a></label>
+        </div>
+        <a href=""  data-bs-toggle="modal" data-bs-target="#exampleModal" >Пользовательское соглашение</a>
+      </div>
+      <div class=" d-grid gap-2 col-4 mx-auto mb-5 p-1">
+        <button
+          class="btn btn-success mt-5"
+          type="submit"
+          [disabled]="!formElement.valid"
+        >Регистрация</button>
+      </div>
+    </form>
   </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Пользовательское соглашение</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h2>Пользовательское соглашение сайта library-book.ru</h2>
+        <h4>1. Общие условия пользовательского соглашения</h4>
+        <h5>1.1. В настоящем документе и вытекающих или связанным с ним отношениях Сторон применяются следующие термины и определения:</h5>
+        <li>а) Платформа — программно-аппаратные средства, интегрированные с Сайтом Администрации;</li>
+        <li>б) Пользователь — дееспособное физическое лицо, присоединившееся к настоящему Соглашению в собственном интересе либо выступающее от имени и в интересах представляемого им юридического лица.</li>
+        <li>в) Сайт Администрации/ Сайт — интернет-сайты, размещенные в домене http://library-book.ru источник и его поддоменах.</li>
+        <li>г) Сервис — комплекс услуг и лицензия, предоставляемые Пользователю с использованием Платформы.</li>
+        <li>д) Соглашение - настоящее соглашение со всеми дополнениями и изменениями.</li>
+        <h5>1.2. Использование вами Сервиса любым способом и в любой форме в пределах его объявленных функциональных возможностей, включая:</h5>
+        <br>
+        <li>просмотр размещенных на Сайте материалов;</li>
+        <li>регистрация и/или авторизация на Сайте,</li>
+        <li>размещение или отображение на Сайте любых материалов, включая но не ограничиваясь такими как: тексты, гипертекстовые ссылки, изображения, аудио и видео- файлы, сведения и/или иная информация,
+        <li>создает договор на условиях настоящего Соглашения в соответствии с положениями ст.437 и 438 Гражданского кодекса Российской Федерации.</li>
+        <br>
+        <h5>1.3. Воспользовавшись любой из указанных выше возможностей по использованию Сервиса вы подтверждаете, что:</h5>
+        <li>а) Ознакомились с условиями настоящего Соглашения в полном объеме до начала использования Сервиса.</li>
+        <li>б) Принимаете все условия настоящего Соглашения в полном объеме без каких-либо изъятий и ограничений с вашей стороны и обязуетесь их соблюдать или прекратить использование Сервиса. Если вы не согласны с условиями настоящего Соглашения или не имеете права на заключение договора на их основе, вам следует незамедлительно прекратить любое использование Сервиса.</li>
+        <li>в) Соглашение (в том числе любая из его частей) может быть изменено Администрацией без какого-либо специального уведомления. Новая редакция Соглашения вступает в силу с момента ее размещения на Сайте Администрации либо доведения до сведения Пользователя в иной удобной форме, если иное не предусмотрено новой редакцией Соглашения.</li>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
 </div>
